--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,24 @@
 </header>
 
 <main>
+    <button>show users</button>
+    <button>show code-snippets</button>
+    <button>show fave-snippets</button>
 
+    <section class="user">
+        <h2>users:</h2>
+        <ul></ul>
+    </section>
+
+    <section class="code-snippet">
+        <h2>code-snippets:</h2>
+        <ul></ul>
+    </section>
+
+    <section class="fave-snippet">
+        <h2>fave-snippets:</h2>
+        <ul></ul>
+    </section>
 </main>
 
 <footer>
