Made basic functionality for website.

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Code-snippet-project</title>
-  <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <header>
@@ -11,21 +11,21 @@
 </header>
 
 <main>
-    <button>show users</button>
-    <button>show code-snippets</button>
-    <button>show fave-snippets</button>
+    <button id="user-btn">show users</button>
+    <button id="code-snippet-btn">show code-snippets</button>
+    <button id="fave-snippet-btn">show fave-snippets</button>
 
-    <section class="user">
+    <section class="user hidden">
         <h2>users:</h2>
         <ul></ul>
     </section>
 
-    <section class="code-snippet">
+    <section class="code-snippet hidden">
         <h2>code-snippets:</h2>
         <ul></ul>
     </section>
 
-    <section class="fave-snippet">
+    <section class="fave-snippet hidden">
         <h2>fave-snippets:</h2>
         <ul></ul>
     </section>
