--- a/public/index.html
+++ b/public/index.html
@@ -28,17 +28,17 @@
     </div>
 
     <section class="user hidden">
-        <h2>users:</h2>
+        <h2>USERS</h2>
         <ul></ul>
     </section>
 
     <section class="code-snippet hidden">
-        <h2>code-snippets:</h2>
+        <h2>CODE-SNIPPETS</h2>
         <ul></ul>
     </section>
 
     <section class="fave-snippet hidden">
-        <h2>fave-snippets:</h2>
+        <h2>FAVE-SNIPPETS</h2>
         <ul></ul>
     </section>
 </main>
