--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Code-snippet-project</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="code-snippet-icon.png">
 </head>
 <body>
 <header>
