--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Code-snippet-project</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="code-snippet-icon.png">
+    <link rel="icon" type="image/x-icon" href="img/code-snippet-icon.png">
 </head>
 <body>
 <header>
@@ -48,6 +48,9 @@
 
 </footer>
 
-<script src="main.js"></script>
+<script src="js-src/faveCodeSnippet.js"></script>
+<script src="js-src/codeSnippet.js"></script>
+<script src="js-src/user.js"></script>
+<script src="js-src/main.js"></script>
 </body>
 </html>
