Added counter to fetch calls and made user load on page load

--- a/public/index.html
+++ b/public/index.html
@@ -28,18 +28,21 @@
         <button id="fave-snippet-btn">show fave-snippets</button>
     </div>
 
-    <section class="user hidden">
+    <section class="user">
         <h2>USERS</h2>
+        <span></span>
         <ul></ul>
     </section>
 
     <section class="code-snippet hidden">
         <h2>CODE-SNIPPETS</h2>
+        <span></span>
         <ul></ul>
     </section>
 
     <section class="fave-snippet hidden">
         <h2>FAVE-SNIPPETS</h2>
+        <span></span>
         <ul></ul>
     </section>
 </main>
