Made log-in dynamic to database users

--- a/public/index.html
+++ b/public/index.html
@@ -13,11 +13,7 @@
     <!-- TODO: Make logged in options dynamic to database -->
     <div>
         <label for="logged-in">Log in as:</label>
-        <select id="logged-in">
-            <option value="1">john_doe</option>
-            <option value="2">jane_smith</option>
-            <option value="3">bob_coder</option>
-        </select>
+        <select id="logged-in"></select>
     </div>
 </header>
 
