Now possible to create new code-snippets

--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,23 @@
     <section class="code-snippet hidden">
         <h2>CODE-SNIPPETS</h2>
         <span></span>
+        <button id="create-code-snippet-btn">create code-snippet</button>
+        <div id="create-code-dialog" class="hidden">
+            <span>Create new code-snippet</span>
+            <form>
+                <label for="title">title</label>
+                <input type="text" id="title" placeholder="Log 2+2...." required>
+                <label for="language">programming language:</label>
+                <select id="language">
+                    <option value="1">JavaScript</option>
+                    <option value="2">HTML</option>
+                </select>
+                <label for="code">code:</label>
+                <textarea id="code" placeholder="console.log(2+2)..." required></textarea>
+            </form>
+            <button id="code-create">create code-snippet</button>
+            <button id="code-cancel">cancel</button>
+        </div>
         <ul></ul>
     </section>
 
