small change in html comment

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
         <button id="fave-snippet-btn">show fave-snippets</button>
     </div>
 
-    <!-- dialog does not work -->
+    <!-- dialog tag does not work -->
     <div id="backdrop" class="hidden"></div>
     <div id="create-user-dialog" class="hidden">
         <span>Create new user</span>
